; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_core.c_lguest_address_ok.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_core.c_lguest_address_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lguest = type { i64 }

@PAGE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lguest_address_ok(%struct.lguest* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.lguest*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.lguest* %0, %struct.lguest** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* %6, align 8
  %9 = add i64 %7, %8
  %10 = load i64, i64* @PAGE_SIZE, align 8
  %11 = udiv i64 %9, %10
  %12 = load %struct.lguest*, %struct.lguest** %4, align 8
  %13 = getelementptr inbounds %struct.lguest, %struct.lguest* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ult i64 %11, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %3
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = add i64 %17, %18
  %20 = load i64, i64* %5, align 8
  %21 = icmp uge i64 %19, %20
  br label %22

22:                                               ; preds = %16, %3
  %23 = phi i1 [ false, %3 ], [ %21, %16 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
